Recommend install of tinycdb which is typically needed on systems that use the plugin

--- a/debian/control
+++ b/debian/control
@@ -9,4 +9,5 @@ Homepage: http://oskt.secure-endpoints.com/knc
 Package: h5l-an2ln-cdb
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: tinycdb
 Description: Heimdal plugin to an2ln using cdb.
